force-app/main/default/objects/PDRI__Data_Set_Field__c/fields/PDRI__Create_Missing__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Create_Missing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Missing</label>
    <type>Checkbox</type>
</CustomField>