force-app/main/default/objects/PDRI__Data_Set_Field__c/fields/PDRI__Data_Set__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Data_Set__c</fullName>
    <label>Data Set</label>
    <referenceTo>PDRI__DataSet__c</referenceTo>
    <relationshipLabel>Data Set Fields</relationshipLabel>
    <relationshipName>Data_Set_Fields</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>