force-app/main/default/objects/PDRI__Data_Set_Field__c/fields/PDRI__Delay_Insert__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Delay_Insert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delay Insert</label>
    <type>Checkbox</type>
</CustomField>