force-app/main/default/objects/PDRI__Data_Set_Field__c/fields/PDRI__External_ID__c.field-meta.xml
<CustomField>
    <fullName>PDRI__External_ID__c</fullName>
    <defaultValue>false</defaultValue>
    <label>External ID</label>
    <type>Checkbox</type>
</CustomField>