force-app/main/default/objects/PDRI__Data_Set_Field__c/fields/PDRI__Fixed_Value_Input__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Fixed_Value_Input__c</fullName>
    <label>Fixed Value Input</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>