force-app/main/default/objects/PDRI__Data_Set_Field__c/fields/PDRI__Set_Empty__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Set_Empty__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Set Empty</label>
    <type>Checkbox</type>
</CustomField>