force-app/main/default/objects/PDRI__Data_Set_Field__c/fields/PDRI__Sync_Picklist_Values__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Sync_Picklist_Values__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sync Picklist Values</label>
    <type>Checkbox</type>
</CustomField>